<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="look_at_my_gui">Look at my GUI</string>
    <string name="click_here">Click here</string>
    <string name="check_this_out">Check this out!</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="type_here">Type here</string>
    <string name="email">Enter your email address</string>
    <string name="button_message">Login</string>
    <string name="edit_msg">Type email here</string>
    <string name="password">Type your password</string>
</resources>