<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_columnSpan="2"
    android:layout_weight="1">

        <TextView
            android:layout_width="223dp"
            android:text="@string/look_at_my_gui"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ClickButton"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/click_here"/>

        <CheckBox
            android:layout_width="187dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/check_this_out" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@drawable/flag" />

        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="150dp"
            android:text="@string/switch_on_off"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:layout_row="3"
            android:layout_column="0"
            android:inputType="textPersonName"
            android:text="@string/type_here"/>




    </GridLayout>