<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:text="@string/look_at_my_gui"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ClickButton"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/click_here" />

        <CheckBox
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layoutDirection="inherit"
            android:orientation="horizontal"
            android:text="@string/check_this_out" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />
        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layerType="hardware"
            android:orientation="horizontal"
            android:text="@string/switch_on_off"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/type_here" />


</LinearLayout>